<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_user"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_myinfo"
            android:icon="@drawable/nav_friends"
            android:title="@string/myinfo" />

        <item
            android:id="@+id/nav_myorders"
            android:icon="@drawable/nav_location"
            android:title="@string/myorders" />

        <item
            android:id="@+id/nav_mycars"
            android:icon="@drawable/ic_directions_car_white_2x"
            android:title="@string/mycars" />

        <item
            android:id="@+id/nav_myregulations"
            android:icon="@drawable/ic_camera"
            android:title="@string/myregulations" />
    </group>

    <group
        android:id="@+id/menu_group_app"
        android:checkableBehavior="single">
        <item

            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_white"
            android:title="@string/settings" />

        <item

            android:id="@+id/nav_about"
            android:icon="@drawable/information_white"
            android:title="@string/about" />
        <item

            android:id="@+id/nav_help"
            android:icon="@drawable/ic_create"
            android:title="@string/help_and_feedback" />

        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_update_white"
            android:title="@string/auto_update" />
    </group>

</menu>
